kube/shop/base/product-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-repo-svc
  namespace: shop-ns
  labels:
    app: product-repo-app
spec:
    selector:
        app: product-repo-app
    ports:
    - port: 8081
      targetPort: 8081
