kube/shop/base/product-repo/v-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-repo-vsvc
  namespace: shop-ns
spec:
  hosts:
  - product-repo-svc
  http:
  - route:
      - destination:
          host: product-repo-svc
