kube/shop/base/product-repo/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-repo-authz
  namespace: shop-ns
spec:
    selector:
      matchLabels:
        app: product-repo-app
    action: ALLOW
    rules:
    - from:
      - source:
          principals: ["*"]
      to:
      - operation:
          methods: ["GET"]
          paths: ["/products"]
